--- a/package.json
+++ b/package.json
@@ -4,17 +4,23 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "DEBUG=project-plant-palette:* nodemon ./bin/www"
+    "dev": " nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^2.0.1",
     "body-parser": "~1.18.2",
-    "cookie-parser": "~1.4.3",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^2.0.1",
+    "cookie-parser": "^1.4.3",
     "dotenv": "~4.0.0",
     "express": "~4.16.0",
+    "express-session": "^1.15.6",
     "hbs": "~4.0.1",
     "mongoose": "~4.13.4",
     "morgan": "~1.9.0",
     "node-sass-middleware": "0.11.0",
+    "passport": "^0.4.0",
+    "passport-google-oauth": "^1.0.0",
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
